--- a/config_riG.cfg
+++ b/config_riG.cfg
@@ -33,6 +33,7 @@ bind "KP_LEFTARROW" "buy flashbang"
 bind "KP_5" "buy molotov; buy incgrenade;"
 bind "KP_RIGHTARROW" "buy hegrenade"
 bind "SEMICOLON" "messagemode"
+bind "`" "toggleconsole"
 bind "," "buyammo1"
 bind "." "buyammo2"
 bind "/" "toggleconsole"
@@ -55,20 +56,20 @@ bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE4" "drop"
 bind "MOUSE5" "+voicerecord"
-bind "A_BUTTON" "+jump"
-bind "B_BUTTON" "+reload"
-bind "X_BUTTON" "+use"
-bind "Y_BUTTON" "invnextnongrenade"
-bind "L_SHOULDER" "invnextitem"
-bind "R_SHOULDER" "+lookspin"
-bind "BACK" "togglescores"
-bind "START" "gameui_activate"
-bind "STICK2" "+attack2"
-bind "DOWN" "drop"
-bind "S1_UP" "xmove"
-bind "L_TRIGGER" "+duck"
-bind "R_TRIGGER" "+attack"
-bind "S2_UP" "xlook"
+bind "JOY1" "+jump"
+bind "JOY2" "+reload"
+bind "JOY3" "+use"
+bind "JOY4" "invnextnongrenade"
+bind "JOY5" "invnextitem"
+bind "JOY6" "+lookspin"
+bind "JOY7" "togglescores"
+bind "JOY8" "gameui_activate"
+bind "JOY10" "+attack2"
+bind "POV_DOWN" "drop"
+bind "Y AXIS NEG" "xmove"
+bind "Z AXIS POS" "+duck"
+bind "Z AXIS NEG" "+attack"
+bind "U AXIS NEG" "xlook"
 adsp_debug "0"
 ai_report_task_timings_on_limit "0"
 ai_think_limit_label "0"
@@ -102,8 +103,8 @@ c_thirdpersonshoulderaimdist "120.0"
 c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "5.0"
 c_thirdpersonshoulderoffset "20.0"
-cachedvalue_count_partybrowser "1522505990"
-cachedvalue_count_teammates "1522505993"
+cachedvalue_count_partybrowser "1523114244"
+cachedvalue_count_teammates "1523114248"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -131,7 +132,7 @@ cl_chatfilters "63"
 cl_clanid "0"
 cl_clock_24hour "1"
 cl_cmdrate "64.000000"
-cl_color "2"
+cl_color "3"
 cl_crosshair_drawoutline "0"
 cl_crosshair_dynamic_maxdist_splitratio "0.35"
 cl_crosshair_dynamic_splitalpha_innermod "1"
@@ -299,7 +300,7 @@ m_rawinput "1"
 m_side "0.8"
 m_yaw "0.022"
 mapoverview_icon_scale "1.0"
-mat_monitorgamma "2.2"
+mat_monitorgamma "1.9"
 mat_monitorgamma_tv_enabled "0"
 mat_powersavingsmode "0"
 mat_queue_report "0"
@@ -313,6 +314,7 @@ mm_csgo_community_search_players_min "3"
 mm_dedicated_search_maxping "77.000000"
 mm_server_search_lan_ports "27015,27016,27017,27018,27019,27020"
 muzzleflash_light "1"
+name "riG"
 net_allow_multicast "1"
 net_graph "1"
 net_graphheight "64"
@@ -333,13 +335,13 @@ option_duck_method "0"
 option_speed_method "0"
 password "matchpw9208"
 play_distance "1"
-player_botdifflast_s "5.000000"
+player_botdifflast_s "2.000000"
 player_competitive_maplist_2v2_7_0_4C128440 "mg_de_train,mg_de_lake,mg_de_inferno,mg_de_shortdust,mg_gd_rialto,mg_de_overpass,mg_de_cbble"
 player_competitive_maplist_8_7_0_77AED00 "mg_de_dust2,mg_de_train,mg_de_inferno,mg_de_nuke,mg_de_mirage,mg_cs_office,mg_de_cache,mg_cs_agency,mg_de_overpass,mg_de_cbble,mg_de_canals"
 player_gamemodelast_m "2.000000"
-player_gamemodelast_s "0.000000"
+player_gamemodelast_s "2.000000"
 player_gametypelast_m "1.000000"
-player_gametypelast_s "3.000000"
+player_gametypelast_s "1.000000"
 player_last_leaderboards_filter "0"
 player_last_leaderboards_mode "0"
 player_last_leaderboards_panel "0"
@@ -349,7 +351,7 @@ player_maplast_m "0"
 player_maplast_s "0"
 player_medalstats_most_recent_time "0"
 player_nevershow_communityservermessage "1"
-player_teamplayedlast "3"
+player_teamplayedlast "2"
 player_wargames_list_7_0_604 "all"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
@@ -372,7 +374,7 @@ scene_showlook "0"
 scene_showmoveto "0"
 scene_showunlock "0"
 sensitivity "2"
-sf_ui_tint "1"
+sf_ui_tint "2"
 sk_autoaim_mode "1"
 skill "1.000000"
 snd_deathcamera_volume "1.0"
@@ -388,7 +390,7 @@ snd_menumusic_volume "1.000000"
 snd_mix_async "1"
 snd_mix_async_onetime_reset "1"
 snd_mixahead "0.025"
-snd_music_selection "1"
+snd_music_selection "2"
 snd_musicvolume "0.040000"
 snd_musicvolume_multiplier_inoverlay "0.1"
 snd_mute_losefocus "1"
@@ -415,7 +417,7 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "sky_cs15_daylight01_hdr"
+sv_skyname "sky_cs15_daylight03_hdr"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
