Add missing binds

--- a/config_riGwastaken.cfg
+++ b/config_riGwastaken.cfg
@@ -16,7 +16,9 @@ bind "d" "+moveright"
 bind "e" "+use"
 bind "f" "+lookatweapon"
 bind "i" "show_loadout_toggle"
+bind "k" "getout"
 bind "m" "teammenu"
+bind "p" "enemydown"
 bind "q" "lastinv"
 bind "r" "+reload"
 bind "s" "+back"
@@ -26,6 +28,12 @@ bind "w" "+forward"
 bind "x" "radio2"
 bind "y" "messagemode"
 bind "z" "radio1"
+bind "KP_INS" "buy vesthelm"
+bind "KP_END" "buy vest"
+bind "KP_DOWNARROW" "buy smokegrenade"
+bind "KP_LEFTARROW" "buy flashbang"
+bind "KP_5" "buy molotov; incgrenade"
+bind "KP_RIGHTARROW" "buy hegrenade"
 bind "," "buyammo1"
 bind "." "buyammo2"
 bind "/" "toggleconsole"
