--- a/config_riGwastaken.cfg
+++ b/config_riGwastaken.cfg
@@ -26,7 +26,7 @@ bind "t" "+spray_menu"
 bind "u" "messagemode2"
 bind "w" "+forward"
 bind "x" "radio2"
-bind "y" "messagemode"
+bind "SEMICOLON" "messagemode"
 bind "z" "radio1"
 bind "KP_INS" "buy vesthelm"
 bind "KP_END" "buy vest"
