--- a/config_cast_rigwastaken.cfg
+++ b/config_cast_rigwastaken.cfg
@@ -378,27 +378,30 @@ sensitivity "2.2"
 sf_ui_tint "1"
 sk_autoaim_mode "1"
 skill "1.000000"
-snd_deathcamera_volume "1.0"
+snd_deathcamera_volume "0.057362"
 snd_duckerattacktime "0.5"
 snd_duckerreleasetime "2.5"
 snd_duckerthreshold "0.15"
 snd_ducking_off "1"
 snd_ducktovolume "0.55"
 snd_hrtf_distance_behind "100"
+snd_hrtf_voice_delay "0.1"
 snd_hwcompat "0"
-snd_mapobjective_volume "1.0"
-snd_menumusic_volume "1.000000"
+snd_mapobjective_volume "0.059515"
+snd_menumusic_volume "0.057989"
 snd_mix_async "1"
 snd_mix_async_onetime_reset "1"
 snd_mixahead "0.025"
 snd_music_selection "2"
-snd_musicvolume "0.100000"
+snd_music_volume_onetime_reset_2 "1"
 snd_musicvolume_multiplier_inoverlay "0.1"
 snd_mute_losefocus "1"
+snd_mvp_volume "0.061923"
 snd_pitchquality "1"
-snd_roundend_volume "1.0"
-snd_roundstart_volume "1.0"
-snd_tensecondwarning_volume "1.0"
+snd_roundend_volume "0.057989"
+snd_roundstart_volume "0.057989"
+snd_surround_speakers "-1"
+snd_tensecondwarning_volume "0.057989"
 snd_use_hrtf_onetime_reset "1"
 sound_device_override ""
 spec_replay_autostart "0"
