--- a/config_rigwastaken.cfg
+++ b/config_rigwastaken.cfg
@@ -37,7 +37,7 @@ bind "ESCAPE" "cancelselect"
 bind "DEL" "mute"
 bind "PAUSE" "pause"
 bind "SHIFT" "+speed"
-bind "ALT" "noclip"
+bind "ALT" "+jumpthrow"
 bind "CTRL" "+duck"
 bind "F3" "autobuy"
 bind "F4" "rebuy"
@@ -47,26 +47,25 @@ bind "F7" "load quick"
 bind "F10" "quit prompt"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
+bind "MOUSE3" "player_ping"
 bind "MOUSE4" "drop"
 bind "MOUSE5" "+voicerecord"
-bind "A_BUTTON" "+jump"
-bind "B_BUTTON" "+reload"
-bind "X_BUTTON" "+use"
-bind "Y_BUTTON" "invnextnongrenade"
-bind "L_SHOULDER" "invnextitem"
-bind "R_SHOULDER" "+lookspin"
-bind "BACK" "togglescores"
-bind "START" "gameui_activate"
-bind "STICK2" "+attack2"
-bind "DOWN" "drop"
-bind "S1_UP" "xmove"
-bind "L_TRIGGER" "+duck"
-bind "R_TRIGGER" "+attack"
-bind "S2_UP" "xlook"
+bind "JOY1" "+jump"
+bind "JOY2" "+reload"
+bind "JOY3" "+use"
+bind "JOY4" "invnextnongrenade"
+bind "JOY5" "invnextitem"
+bind "JOY6" "+lookspin"
+bind "JOY7" "togglescores"
+bind "JOY8" "gameui_activate"
+bind "JOY10" "+attack2"
+bind "POV_DOWN" "drop"
+bind "Y AXIS NEG" "xmove"
+bind "Z AXIS POS" "+duck"
+bind "Z AXIS NEG" "+attack"
+bind "U AXIS NEG" "xlook"
 @panorama_debug_overlay_opacity "0.8"
 adsp_debug "0"
-ai_report_task_timings_on_limit "0"
-ai_think_limit_label "0"
 budget_averages_window "30"
 budget_background_alpha "128"
 budget_bargraph_background_alpha "128"
@@ -82,48 +81,13 @@ budget_peaks_window "30"
 budget_show_averages "0"
 budget_show_history "1"
 budget_show_peaks "1"
-bugreporter_uploadasync "0"
-bugreporter_username ""
-c_maxdistance "200"
-c_maxpitch "90"
-c_maxyaw "135"
-c_mindistance "30"
-c_minpitch "0"
-c_minyaw "-135"
-c_orthoheight "100"
-c_orthowidth "100"
-c_thirdpersonshoulder "false"
-c_thirdpersonshoulderaimdist "120.0"
-c_thirdpersonshoulderdist "40.0"
-c_thirdpersonshoulderheight "5.0"
-c_thirdpersonshoulderoffset "20.0"
-cachedvalue_count_partybrowser "1545217035"
-cachedvalue_count_teammates "1545217037"
-cam_collision "1"
-cam_idealdelta "4.0"
-cam_idealdist "150"
-cam_idealdistright "0"
-cam_idealdistup "0"
-cam_ideallag "4.0"
-cam_idealpitch "0"
-cam_idealyaw "0"
-cam_snapto "0"
-cc_lang ""
-cc_linger_time "1.0"
-cc_predisplay_time "0.25"
-cc_subtitles "0"
-chet_debug_idle "0"
-cl_allowdownload "1"
-cl_allowupload "1"
 cl_autohelp "1"
 cl_autowepswitch "0"
 cl_bob_lower_amt "5.000000"
 cl_bobamt_lat "0.100000"
 cl_bobamt_vert "0.100000"
 cl_bobcycle "0.98"
-cl_chatfilter_version "1"
-cl_chatfilters "63"
-cl_cmdrate "64.000000"
+cl_cmdrate "128"
 cl_color "2"
 cl_compass_enabled "1"
 cl_crosshair_drawoutline "0"
@@ -148,15 +112,8 @@ cl_crosshairsize "2.500000"
 cl_crosshairstyle "4"
 cl_crosshairthickness "0.500000"
 cl_crosshairusealpha "1"
-cl_debugrumble "0"
-cl_detail_avoid_force "0.4"
-cl_detail_avoid_radius "64"
-cl_detail_avoid_recover_speed "0.25"
-cl_detail_max_sway "5"
 cl_disablefreezecam "0"
-cl_disablehtmlmotd "0"
 cl_dm_buyrandomweapons "0"
-cl_downloadfilter "all"
 cl_dz_playagain_auto_spectate "0"
 cl_embedded_stream_audio_volume "60"
 cl_embedded_stream_audio_volume_xmaster "1"
@@ -164,6 +121,7 @@ cl_fixedcrosshairgap "3"
 cl_forcepreload "0"
 cl_freezecampanel_position_dynamic "1"
 cl_grass_mip_bias "-0.5"
+cl_hide_avatar_images ""
 cl_hud_background_alpha "0.5"
 cl_hud_bomb_under_radar "1"
 cl_hud_color "0"
@@ -174,6 +132,8 @@ cl_hud_radar_scale "1"
 cl_idealpitchscale "0.8"
 cl_inventory_saved_filter2 "all"
 cl_inventory_saved_sort2 "inv_sort_age"
+cl_invites_only_friends "0"
+cl_invites_only_mainmenu "0"
 cl_join_advertise "1"
 cl_minimal_rtt_shadows "1"
 cl_mouselook "1"
@@ -181,16 +141,20 @@ cl_mute_all_but_friends_and_party "0"
 cl_mute_enemy_team "0"
 cl_obs_interp_enable "1"
 cl_observercrosshair "1"
+cl_player_ping_mute "0"
 cl_playerspray_auto_apply "1"
-cl_quickinventory_deadzone_size "0.05"
 cl_quickinventory_lastinv "0"
+cl_quickinventory_line_update_speed "65.0f"
 cl_radar_always_centered "1"
 cl_radar_icon_scale_min "0.6"
 cl_radar_rotate "1"
 cl_radar_scale "0.7"
 cl_radar_square_with_scoreboard "1"
+cl_radial_radio_tab "0"
+cl_radialmenu_deadzone_size "0.04"
 cl_righthand "1"
 cl_rumblescale "1.0"
+cl_sanitize_player_names "0"
 cl_scalecrosshair "1"
 cl_scoreboard_mouse_enable_binding "+attack2"
 cl_scoreboard_survivors_always_on "0"
@@ -205,7 +169,7 @@ cl_teamid_overhead_always "0"
 cl_teammate_colors_show "1"
 cl_thirdperson "0"
 cl_timeout "30"
-cl_updaterate "64"
+cl_updaterate "128"
 cl_use_opens_buy_menu "0"
 cl_viewmodel_shift_left_amt "0.500000"
 cl_viewmodel_shift_right_amt "0.250000"
@@ -223,8 +187,8 @@ gameinstructor_enable "0"
 hud_scaling "0.85"
 hud_showtargetid "1"
 hud_takesshots "0"
-key_bind_version "4"
-lobby_default_privacy_bits1 "0"
+key_bind_version "5"
+lobby_default_privacy_bits2 "0"
 lockMoveControllerRet "0"
 lookspring "0"
 lookstrafe "0"
@@ -251,7 +215,8 @@ mc_accel_band_size "0.5"
 mc_dead_zone_radius "0.06"
 mc_max_pitchrate "100.0"
 mc_max_yawrate "230.0"
-muzzleflash_light "1"
+mm_dedicated_search_maxping "50"
+mm_server_search_lan_ports "27015,27016,27017,27018,27019,27020"
 net_allow_multicast "1"
 net_graph "1"
 net_graphheight "64"
@@ -272,6 +237,7 @@ npc_height_adjust "1"
 option_duck_method "0"
 option_speed_method "0"
 play_distance "1"
+player_botdifflast_s "5"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
 r_drawtracers_firstperson "1"
@@ -285,14 +251,14 @@ rate "786432"
 safezonex "1.0"
 safezoney "1.0"
 sc_enable "1.0"
-sc_joystick_map "1"
 sc_pitch_sensitivity "1.0"
 sc_yaw_sensitivity "1.0"
 scene_showfaceto "0"
 scene_showlook "0"
 scene_showmoveto "0"
 scene_showunlock "0"
-sensitivity "2.25"
+sensitivity "2"
+sk_autoaim_mode "1"
 skill "1.000000"
 snd_deathcamera_volume "0.059396"
 snd_duckerattacktime "0.5"
@@ -313,13 +279,14 @@ snd_music_selection "1"
 snd_music_volume_onetime_reset_2 "1"
 snd_musicvolume_multiplier_inoverlay "0.1"
 snd_mute_losefocus "1"
+snd_mute_mvp_music_live_players "0"
 snd_mvp_volume "0.061923"
 snd_pitchquality "1"
 snd_roundend_volume "0.061245"
 snd_roundstart_volume "0.061245"
-snd_surround_speakers "-1"
+snd_surround_speakers "0"
 snd_tensecondwarning_volume "0.061245"
-sound_device_override ""
+sound_device_override "{0.0.0.00000000}.{d803e91f-c07a-4719-81ac-26b69751f308}"
 spec_replay_autostart "0"
 spec_show_xray "1"
 spec_usenumberkeys_nobinds "1"
@@ -327,24 +294,34 @@ ss_splitmode "0"
 store_version "1"
 suitvolume "0.25"
 sv_forcepreload "0"
+sv_log_onefile "0"
+sv_logbans "0"
+sv_logecho "1"
+sv_logfile "1"
+sv_logflush "0"
+sv_logsdir "logs"
+sv_noclipaccelerate "5"
+sv_noclipspeed "5"
+sv_pvsskipanimation "1"
+sv_skyname "sky_cs15_daylight01_hdr"
+sv_specaccelerate "5"
+sv_specnoclip "1"
+sv_specspeed "3"
 sv_unlockedchapters "1"
 sv_voiceenable "1"
-test_convar "0"
 texture_budget_background_alpha "128"
 texture_budget_panel_bottom_of_history_fraction ".25"
 texture_budget_panel_height "284"
 texture_budget_panel_width "512"
 texture_budget_panel_x "0"
 texture_budget_panel_y "450"
-tr_best_course_time "0"
 tr_completed_training "0"
 tv_nochat "1"
+ui_inventorysettings_recently_acknowledged ""
 ui_popup_weaponupdate_version "1"
+ui_setting_advertiseforhire_auto "1"
+ui_setting_advertiseforhire_auto_last "/competitive"
 ui_steam_overlay_notification_position "topleft"
-ui_vanitysetting_itemid "14641049110"
-ui_vanitysetting_loadoutslot "rifle1"
-ui_vanitysetting_model2 "models/player/custom_player/legacy/tm_jumpsuit_varianta.mdl"
-ui_vanitysetting_team "t"
 vgui_message_dialog_modal "1"
 viewmodel_fov "68"
 viewmodel_offset_x "2.5"
@@ -353,7 +330,7 @@ viewmodel_offset_z "-2.0"
 viewmodel_presetpos "0"
 viewmodel_recoil "0"
 voice_caster_enable "0"
-voice_caster_scale "1"
+voice_caster_scale "0.197310"
 voice_enable "1"
 voice_forcemicrecord "1"
 voice_mixer_boost "0"
@@ -364,7 +341,7 @@ voice_positional "0"
 voice_scale "0.15"
 voice_system_enable "1"
 voice_threshold "4000"
-volume "0.7"
+volume "0.6"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
