--- a/config_rig.cfg
+++ b/config_rig.cfg
@@ -25,7 +25,7 @@ bind "s" "+back"
 bind "t" "+spray_menu"
 bind "u" "messagemode2"
 bind "w" "+forward"
-bind "x" "slot12"
+bind "y" "slot12"
 bind "z" "radio"
 bind "SEMICOLON" "messagemode"
 bind "," "buyammo1"
