--- a/config_rig.cfg
+++ b/config_rig.cfg
@@ -37,7 +37,7 @@ bind "ESCAPE" "cancelselect"
 bind "DEL" "mute"
 bind "PAUSE" "pause"
 bind "SHIFT" "+speed"
-bind "ALT" "+jumpthrow"
+bind "ALT" "noclip"
 bind "CTRL" "+duck"
 bind "F3" "autobuy"
 bind "F4" "rebuy"
