--- a/config_rig.cfg
+++ b/config_rig.cfg
@@ -18,6 +18,7 @@ bind "f" "+lookatweapon"
 bind "i" "show_loadout_toggle"
 bind "k" "getout"
 bind "m" "teammenu"
+bind "o" "say ♿"
 bind "p" "enemydown"
 bind "q" "lastinv"
 bind "r" "+reload"
